[package]
name = "protohacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.5", features = ["derive"] }
futures = "0.3.28"
hex-literal = "0.4.1"
is_prime = "2.0.9"
itertools = "0.11.0"
nom = "7.1.3"
parking_lot = "0.12.1"
pin-project = "1.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
time = { version = "0.3.22", features = ["macros"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio-util = { version = "0.7.8", features = ["io"] }

[[bin]]
name = "protohacker"
path = "src/bin/main.rs"

[dev-dependencies]
nonzero_ext = "0.3.0"
pretty_assertions = "1.3.0"
anyhow = "1.0.71"
